tests/build/cases/widget/declared_prop_does_not_exist1.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `margin`
 --> cases/widget/declared_prop_does_not_exist1.rs:8:9
  |
8 |         margin = { margin: 0 };
  |         ^^^^^^ not found in `margin`
  |
help: consider importing one of these items
  |
5 |     inherit!(zero_ui::core::widget_base::use crate::test_widget::__properties__::enabled::property;
  |                                          ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
5 |     inherit!(zero_ui::core::widget_base::use crate::test_widget::__properties__::id::property;
  |                                          +++++++++++++++++++++++++++++++++++++++++++++++++++++
5 |     inherit!(zero_ui::core::widget_base::use crate::test_widget::__properties__::visibility::property;
  |                                          +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
5 |     inherit!(zero_ui::core::widget_base::use zero_ui::prelude::align::property;
  |                                          ++++++++++++++++++++++++++++++++++++++
    and 412 other candidates
help: if you import `property`, refer to it directly
  |
8 -         margin = { margin: 0 };
8 +         margin = { margin: 0 };
  |
